# fast-api-lms

./: .pre-commit-config.yaml  README.md  alembic.ini  main.py  pyproject.toml
alembic/: env.py
alembic/data/: students.json
alembic/versions/: 0ea8b0e86d6e_initial.py  47ef9fd0d17f_.py  908c4e8c812e_.py  90f3dd23add1_.py  92b07846dd4f_.py  9777d8ff382c_.py  98dfc5df0e45_moving_is_ctive_to_user_table.py  fbf4bb56cee1_.py
api/: courses.py  sections.py  users.py
api/utils/: courses.py
db/: db_setup.py
db/models/: course.py  user.py
pydantic_schemas/: user.py
