[tool.poetry]
name = "fast-api-lms"
version = "0.1.0"
description = "FastAPI backend with postgresql, no frontend"
authors = ["rich leblanc <rich.leblanc1@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.24.0.post1"
fastapi = "^0.104.1"
pydantic = "^2.5.2"
sqlalchemy = "^2.0.23"
sqlalchemy-utils = "^0.41.1"
psycopg2 = "^2.9.9"
alembic = "^1.12.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
