[tool.poetry]
name = "fast-api-lms"
version = "0.1.0"
description = "FastAPI backend with postgresql, no frontend"
authors = ["rich leblanc <rich.leblanc1@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.24.0.post1"
fastapi = "^0.104.1"
pydantic = "^2.5.2"
sqlalchemy = "^2.0.23"
sqlalchemy-utils = "^0.41.1"
psycopg2 = "^2.9.9"
alembic = "^1.12.1"
email-validator = "^2.1.0.post1"
asyncpg = "^0.29.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
flake8 = "^6.1.0"
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[flake8]
ignore = ["E203", "E266", "E501", "W503", "F403", "F401"]
max-line-length = 79
max-complexity = 18
select = ["B", "C", "E", "F", "W", "T4", "B9"]

[tool.black]
line-length = 79
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
  | alembic
)/
'''